--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,5 +12,18 @@ jobs:
     steps:
       - name: Trigger Vercel Deployment
         run: |
-          curl -X POST "https://api.vercel.com/v1/integrations/deploy/prj_NR37GTjKp1kV7xbZN0QXQMI9BadD/0sHOun93kC"
+          echo "Triggering Vercel deployment..."
+          response=$(curl -s -w "\n%{http_code}" -X POST "https://api.vercel.com/v1/integrations/deploy/prj_NR37GTjKp1kV7xbZN0QXQMI9BadD/0sHOun93kC")
+          http_code=$(echo "$response" | tail -n1)
+          body=$(echo "$response" | sed '$d')
+          
+          echo "Response status: $http_code"
+          echo "Response body: $body"
+          
+          if [ "$http_code" -ge 200 ] && [ "$http_code" -lt 300 ]; then
+            echo "✅ Deployment triggered successfully!"
+          else
+            echo "❌ Deployment failed with status code: $http_code"
+            exit 1
+          fi
 
